# pico-2-pico

./: README.md
i2c/: CMakeLists.txt  README.md  main.cpp
i2c-pio/: CMakeLists.txt  README.md  i2c.pio  main.cpp  pio_i2c.cpp  pio_i2c.h
i2c-pio/examples/: i2c_bus_scan.c
spi/: CMakeLists.txt  README.md  main.cpp
